<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gpc_sunset"
        tools:context=".login.LoginActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/login_box"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/userNameInput"
                style="@style/LoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_input_side_margins"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/login_input_side_margins"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordInput"
                style="@style/LoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_input_side_margins"
                android:layout_marginEnd="@dimen/login_input_side_margins"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonLogIn"
                style="@style/BoxButtonOverlay.Text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin_vertical"
                android:layout_marginBottom="@dimen/button_margin_vertical"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="26dp"
                android:text="@string/login_button"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>